<resources>
    <string name="app_name">ShariX</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ShariX</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="equipment_list">Equipment list</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="timeline">Timeline</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="test">Test</string>
    <string name="action_creators">Creators</string>
    <string name="action_profile">Profile</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Сancel</string>
    <string name="button_confirm">Confirm</string>
    <string name="text_time">The timing of the reservation</string>
    <string name="text_f_name">FirstName</string>
    <string name="text_s_name">SecondName</string>
    <string name="text_number">Number</string>
    <string name="text_task_list">Task list</string>
    <string name="text_creators">Creators</string>
    <string name="text_choose_d">Choose a date</string>
    <string name="text_news">News</string>
    <string name="text_creators_n1"></string>
    <string name="title_activity_profile">Your profile</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_creators">Creators</string>


    //Bug fix
    <string name="todo">TODO</string>

    //------------------------------------


</resources>
