<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".Fragments.TimeFragment"
                                             android:background="@color/colorAccent" tools:visibility="visible"
                                             android:visibility="visible"
                                             android:id="@+id/frameLayout">
    <Button
            android:text="@string/button_confirm"
            android:layout_width="345dp"
            android:layout_height="65dp"
            android:id="@+id/button7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintVertical_bias="1.0"
            android:textColor="#000000"
            android:shadowColor="#00FF0000" android:backgroundTint="#E20BA344"/>
    <TextView
            android:text="@string/text_time"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button7" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:textSize="24sp"/>
    <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/calendarView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/button7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.421"/>
    <TextView
            android:text="@string/text_choose_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/calendarView"
            android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.108"/>
</android.support.constraint.ConstraintLayout>